<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <EditText
        android:id="@+id/first_number"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <EditText
        android:id="@+id/second_number"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
         >

    <Button
        android:id="@+id/btnadd"
        style="@style/AppTheme"
        android:text="@string/addButton"

        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/btnSubtruct"
        style="@style/AppTheme"
        android:text="@string/btnSubtruct"

        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_multiply"
        style="@style/AppTheme"
        android:text="@string/btn_multiply"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_divetion"
        style="@style/AppTheme"
        android:text="@string/btn_division"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content" />
</LinearLayout>


    <Button
        android:id="@+id/btn_equal"
        android:text="@string/equal_str"
        style="@style/AppTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:textSize="20sp"
        android:hint="@string/result_text"
        />

</LinearLayout>
